--- a/Clase 01/index.html
+++ b/Clase 01/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="imagen" id="imagen messi">
         <h1>A continuación te dejo una foto de Leonel Andres Messi feliz:</h1>
-        <img src="./imagen.jpg" alt="foto leo messi"/>
+        <img src="./imagen.jpg" alt="foto leo messi" />
       </div>
     </section>
 
@@ -45,10 +45,12 @@
             <h5>Redes Sociales:</h5>
             <ul>
               <li>
-                <a href="https://www.instagram.com/leandro.fd_/">Instagram</a>
+                <a href="https://www.instagram.com/leandro.fd_/"
+                  >Instagram personal</a
+                >
               </li>
               <li><a href="https://twitter.com/Leandro_fd_">Twitter</a></li>
-              <li><a href="https://github.com/LeandroTorales">Github</a> </li>
+              <li><a href="https://github.com/LeandroTorales">Github</a></li>
             </ul>
           </nav>
         </footer>
