--- a/Clase 02/CV/index.html
+++ b/Clase 02/CV/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <header>
-        <h1>Este es mi curriculum vitae</h1>
+        <h1>Este es mi curriculum vitae:</h1>
         <ul>
           <li>
             <h2>Nombre: Leandro Federico Torales</h2>
