--- a/Clase 05/index.html
+++ b/Clase 05/index.html
@@ -7,5 +7,5 @@
     <title>Clase 05</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body></body>
+  <body>a</body>
 </html>
