--- a/Proyect/index.html
+++ b/Proyect/index.html
@@ -13,14 +13,16 @@
       <nav>
         <div class="linksYLogo">
           <a href="https://www.instagram.com/leandro.fd_/" id="linkLogo">
-            <img src="./img/imgLogoPng.png" alt="imgLogo" id="imgLogo" />
+            <img src="./img/hogueraImgLogo.png" alt="imgLogoNav" id="imgLogoNav" />
           </a>
           <div class="title"><h1>Bienvenidos</h1></div>
           <div class="divLinks">
             <a href="https://www.google.com/" class="links"><p>Inicio</p></a>
-            <a href="https://www.google.com/" class="links"><p>Productos</p></a>
-            <a href="https://www.google.com/" class="links"><p>Nosotros</p></a>
-            <a href="https://www.google.com/" class="links"><p>Contacto</p></a>
+            <a href="https://www.google.com/" class="links"><p>Zonas</p></a>
+            <a href="https://www.google.com/" class="links"><p>Armas</p></a>
+            <a href="https://www.google.com/" class="links"><p>Builds</p></a>
+            <a href="https://www.google.com/" class="links"><p>Jefes</p></a>
+            <a href="https://www.google.com/" class="links"><p>Finales</p></a>
           </div>
         </div>
       </nav>
@@ -28,21 +30,33 @@
     <main>
       <article class="hero">
         <section class="presentacion">
-          <h2>El comienzo de nuestro viaje</h2>
-          <div class="heroText-img">
+          <h2 class="titleHero">El comienzo de nuestro viaje</h2>
+          <div class="heroTextYimg">
             <div class="textHero">
               <p>
-                Hola, en esta serie de guias te ofreceremos el poder adentrarte por los oscuros y tenebrosos lugares de Dark Souls 3, guiandote en
+                Hola, en esta serie de guías te ofreceremos el poder adentrarte por los oscuros y tenebrosos lugares de Dark Souls 3, guiandote en
                 cada paso, revelandote tesoros ocultos, recomendandote caminos, armas, mejoras, armaduras, que te haran coronarte como el nuevo señor
-                de la llama.
+                de la llama. <br />
+                Entendemos lo confuso que pueden llegar a ser algunas zonas y por eso te traemos todo mas explicado que nunca.
               </p>
             </div>
-            <div class="onikiriDiv">
-              <img src="./img/onikiri_and_ubadachi.png" alt="onikiri_and_ubadachi" id="onikiriId"/>
+            <div class="PraiseTheSunLogoImg">
+              <img src="./img/imgPraiseTheSunLogo.png" alt="hogueraImgLogo" id="hogueraImgLogoId" />
             </div>
+          </div>
+        </section>
+
+        <section class="aboutUs">
+          <h2 class="titleAboutUs">Acerca de nosotros</h2>
+          <div class="textAboutUs">
+            <p>
+              Somos un equipo de fanaticos de esta gran saga de videojuegos, en la que decidimos hacer una guia de una de sus obras maestras,
+              titulada: Dark souls 3, proveniente del estudio "FromSoftware".
+            </p>
           </div>
         </section>
       </article>
     </main>
+    <footer class="footerRigths"><p>Copyright © All Rights Reserved. Nucba Proyect</p></footer>
   </body>
 </html>
