--- a/Proyect 2 Clase 10/index.html
+++ b/Proyect 2 Clase 10/index.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <nav>
-        <img src="./img/fifa-nav-logo.png" alt="fifa-nav-logo" class="fifa-nav-logo" />
+        <div class="div-fifa-nav-logo">
+          <img src="./assets/img/fifa-nav-logo.png" alt="fifa-nav-logo" class="fifa-nav-logo" />
+        </div>
 
         <ul>
           <li><a href="./index.html" class="li-a-navLinks">Inicio </a></li>
@@ -35,5 +37,12 @@
         ></label>
       </nav>
     </header>
+    <section class="hero-section">
+      <article class="hero-article-content">
+        <h1>Bienvenido</h1>
+        <p>Aquí encontraras toda la información de tus equipos favoritos de fifa 22, cartas de jugadores, iconos de jugadores y mucho más.</p>
+        <a href="#">Empezar</a>
+      </article>
+    </section>
   </body>
 </html>
