--- a/challenge1Nucba/index.html
+++ b/challenge1Nucba/index.html
@@ -30,7 +30,27 @@
         <p>Utilizamos cookies para mejorar la experiencia del usuario, la analítica y el marketing.</p>
         <input type="button" value="¡Eso está bien!" id="button-input-eso-esta-bien" />
       </section>
-      <section></section>
+      <section class="card-2">
+        <div class="svg-x">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="35"
+            height="35"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="#2C3E50"
+            stroke-width="1"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <line x1="18" y1="6" x2="6" y2="18"></line>
+            <line x1="6" y1="6" x2="18" y2="18"></line>
+          </svg>
+        </div>
+        <img src="./assets/img/Frame.png" alt="frame" id="frame-png" />
+        <p id="p-card2">¡Se cerrará la sesión inmediatamente!</p>
+        <input type="button" value="Ampliar sesión" id="button-input-ampliar-sesión" />
+      </section>
     </article>
   </body>
 </html>
