--- a/proyect 3/index.html
+++ b/proyect 3/index.html
@@ -29,12 +29,30 @@
         </ul>
       </nav>
     </header>
-    <section class="hero-section">
-      <article class="hero-article-content">
-        <h1 class="title-hero-h1">Bienvenido</h1>
-        <p>Aquí encontraras toda la información de tus equipos favoritos de fifa 22, cartas de jugadores, iconos de jugadores y mucho más.</p>
-        <a href="#">Empezar</a>
-      </article>
-    </section>
+    <main>
+      <section class="hero-section">
+        <article class="hero-article-content">
+          <h1 class="title-hero-h1">Bienvenido</h1>
+          <p>Aquí encontraras toda la información de tus equipos favoritos de fifa 22, cartas de jugadores, iconos de jugadores y mucho más.</p>
+          <a href="#">Empezar</a>
+        </article>
+      </section>
+      <section class="cards-container">
+        <article class="card-players">
+          <img src="./assets/icons/player-png-card.png" alt="player-png-card" id="player-png-card" />
+          <h2>Jugadores</h2>
+          <p>Aprieta aquí y podras revisar nuestra coleccion de jugadores disponibles</p>
+        </article>
+        <article class="card-ligues">
+            <img src="./assets/icons/ligue-png-card.png" alt="ligue-png-card" id="ligue-png-card">
+            <h2>Ligas</h2>
+            <p>Visita las ligas mas competitivas actualmente</p>
+        </article>
+        <article class="card-estadiums">
+            <h2>Estadios</h2>
+            <p>Revisa los estadios mas icónicos del deporte mas famoso del mundo</p>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
