empezar responsive, añadir alguna font linda

--- a/proyect 3/index.html
+++ b/proyect 3/index.html
@@ -14,8 +14,8 @@
       <nav class="menu">
         <ul class="list-nav">
           <li><a href="./index.html" id="active" class="link-menu">Inicio </a></li>
-          <li><a href="#" class="link-menu">Jugadores</a></li>
-          <li><a href="#" class="link-menu">Ligas</a></li>
+          <li><a href="#jugadores" class="link-menu">Jugadores</a></li>
+          <li><a href="#ligas" class="link-menu">Ligas</a></li>
           <li><a href="#" class="link-menu">Contacto</a></li>
           <li><a href="#" class="link-menu">Sobre nosotros</a></li>
           <ul>
@@ -37,22 +37,47 @@
           <a href="#">Empezar</a>
         </article>
       </section>
-      <section class="cards-container">
-        <article class="card-players">
-          <img src="./assets/icons/player-png-card.png" alt="player-png-card" id="player-png-card" />
-          <h2>Jugadores</h2>
-          <p>Aprieta aquí y podras revisar nuestra coleccion de jugadores disponibles</p>
-        </article>
-        <article class="card-ligues">
-            <img src="./assets/icons/ligue-png-card.png" alt="ligue-png-card" id="ligue-png-card">
-            <h2>Ligas</h2>
-            <p>Visita las ligas mas competitivas actualmente</p>
-        </article>
-        <article class="card-estadiums">
-            <h2>Estadios</h2>
-            <p>Revisa los estadios mas icónicos del deporte mas famoso del mundo</p>
-        </article>
+      <section class="section-cards">
+        <h2 class="title-section-cards">Explora lo que ofrecemos</h2>
+        <div class="container-cards">
+          <article class="card-players" id="jugadores">
+            <img src="./assets/icons/player-png-card.png" alt="player-png-card" id="player-png-card" />
+            <h2 class="h2-cards">Jugadores</h2>
+            <p class="text-cards">Aprieta aquí y podras revisar nuestra coleccion de jugadores disponibles</p>
+          </article>
+          <article class="card-ligues" id="ligas">
+            <img src="./assets/icons/ligue-png-card.png" alt="ligue-png-card" id="ligue-png-card" />
+            <h2 class="h2-cards">Ligas</h2>
+            <p class="text-cards">Visita las ligas mas competitivas actualmente</p>
+          </article>
+          <article class="card-stadiums">
+            <img src="./assets/icons/stadium-png-card.png" alt="stadium-png-card" id="stadium-png-card" />
+            <h2 class="h2-cards">Estadios</h2>
+            <p class="text-cards">Revisa los estadios mas icónicos del deporte mas famoso del mundo</p>
+          </article>
+        </div>
       </section>
     </main>
+    <footer>
+        <h2>Contacto</h2>
+      <section>
+        <div class="container-footer-column1">
+          <h4>Argentina, Uruguay</h4>
+          <ul>
+            <li><i class="fa-solid fa-location-dot"></i>Calle falsa 1234</li>
+            <li><i class="fa-solid fa-envelope"></i>leandrotorales1234@gmail.com</li>
+            <li><i class="fa-solid fa-phone"></i>123123123123</li>
+          </ul>
+        </div>
+        <div class="container-footer-column2">
+          <h4>Estados Unidos, Canadá</h4>
+          <ul>
+            <li><i class="fa-solid fa-location-dot"></i>Calle falsa 1234</li>
+            <li><i class="fa-solid fa-envelope"></i>leandrotorales1234@gmail.com</li>
+            <li><i class="fa-solid fa-phone"></i>123123123123</li>
+          </ul>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
