--- a/proyect 3/index.html
+++ b/proyect 3/index.html
@@ -11,21 +11,21 @@
   <body>
     <header>
       <img src="./assets/icons/fifa-nav-logo.png" alt="fifa-header-logo" class="fifa-header-logo" />
-      <nav class="menu">
+      <nav class="navbar">
+        <label for="input-checkbox-hamburguer"><i class="fa-solid fa-bars"></i></label>
+        <input type="checkbox" id="input-checkbox-hamburguer" />
         <ul class="list-nav">
           <li><a href="./index.html" id="active" class="link-menu">Inicio </a></li>
           <li><a href="#jugadores" class="link-menu">Jugadores</a></li>
           <li><a href="#ligas" class="link-menu">Ligas</a></li>
           <li><a href="#" class="link-menu">Contacto</a></li>
           <li><a href="#" class="link-menu">Sobre nosotros</a></li>
-          <ul>
-            <li class="bar-search">
-              <input type="search" placeholder="Barra de búsqueda" id="searchInput" />
-              <label for="searchInput" class="label-search-nav"><i class="fa-solid fa-magnifying-glass"></i></label>
-            </li>
-          </ul>
-          <input type="checkbox" id="input-checkbox-hamburguer" />
-          <label for="input-checkbox-hamburguer" class="label-checkbox-hamburguer"><i class="fa-solid fa-bars"></i></label>
+        </ul>
+        <ul class="bar-search-ul">
+          <li>
+            <input type="search" placeholder="Barra de búsqueda" id="searchInput" />
+            <label for="searchInput" class="label-search-nav"><i class="fa-solid fa-magnifying-glass"></i></label>
+          </li>
         </ul>
       </nav>
     </header>
@@ -38,28 +38,30 @@
         </article>
       </section>
       <section class="section-cards">
-        <h2 class="title-section-cards">Explora lo que ofrecemos</h2>
-        <div class="container-cards">
-          <article class="card-players" id="jugadores">
-            <img src="./assets/icons/player-png-card.png" alt="player-png-card" id="player-png-card" />
-            <h2 class="h2-cards">Jugadores</h2>
-            <p class="text-cards">Aprieta aquí y podras revisar nuestra coleccion de jugadores disponibles</p>
-          </article>
-          <article class="card-ligues" id="ligas">
-            <img src="./assets/icons/ligue-png-card.png" alt="ligue-png-card" id="ligue-png-card" />
-            <h2 class="h2-cards">Ligas</h2>
-            <p class="text-cards">Visita las ligas mas competitivas actualmente</p>
-          </article>
-          <article class="card-stadiums">
-            <img src="./assets/icons/stadium-png-card.png" alt="stadium-png-card" id="stadium-png-card" />
-            <h2 class="h2-cards">Estadios</h2>
-            <p class="text-cards">Revisa los estadios mas icónicos del deporte mas famoso del mundo</p>
-          </article>
+        <div class="container-card-title">
+          <h2 class="title-section-cards">Explora lo que ofrecemos</h2>
+          <div class="container-cards">
+            <article class="cards">
+              <img src="./assets/icons/player-png-card.png" alt="player-png-card" id="player-png-card" />
+              <h2 class="h2-cards">Jugadores</h2>
+              <p class="text-cards">Aprieta aquí y podras revisar nuestra coleccion de jugadores disponibles.</p>
+            </article>
+            <article class="cards">
+              <img src="./assets/icons/ligue-png-card.png" alt="ligue-png-card" id="ligue-png-card" />
+              <h2 class="h2-cards">Ligas</h2>
+              <p class="text-cards">Visita las ligas mas competitivas actualmente.</p>
+            </article>
+            <article class="cards">
+              <img src="./assets/icons/stadium-png-card.png" alt="stadium-png-card" id="stadium-png-card" />
+              <h2 class="h2-cards">Estadios</h2>
+              <p class="text-cards">Revisa los estadios mas icónicos del deporte mas famoso del mundo.</p>
+            </article>
+          </div>
         </div>
       </section>
     </main>
     <footer>
-        <h2>Contacto</h2>
+      <h2>Contacto</h2>
       <section>
         <div class="container-footer-column1">
           <h4>Argentina, Uruguay</h4>
@@ -78,6 +80,7 @@
           </ul>
         </div>
       </section>
+      <p>All rights deserved. Nucba copyright ©.</p>
     </footer>
   </body>
 </html>
