hamburguesa hecho, deployar en vercel

--- a/proyect 3/index.html
+++ b/proyect 3/index.html
@@ -41,20 +41,26 @@
         <div class="container-card-title">
           <h2 class="title-section-cards">Explora lo que ofrecemos</h2>
           <div class="container-cards">
-            <article class="cards">
-              <img src="./assets/icons/player-png-card.png" alt="player-png-card" id="player-png-card" />
-              <h2 class="h2-cards">Jugadores</h2>
-              <p class="text-cards">Aprieta aquí y podras revisar nuestra coleccion de jugadores disponibles.</p>
+            <article>
+              <a href="./pags/players.html" class="link-cards-hero">
+                <img src="./assets/icons/player-png-card.png" alt="player-png-card" id="player-png-card" />
+                <h2 class="h2-cards">Jugadores</h2>
+                <p class="text-cards">Aprieta aquí y podras revisar nuestra coleccion de jugadores disponibles.</p></a
+              >
             </article>
-            <article class="cards">
-              <img src="./assets/icons/ligue-png-card.png" alt="ligue-png-card" id="ligue-png-card" />
-              <h2 class="h2-cards">Ligas</h2>
-              <p class="text-cards">Visita las ligas mas competitivas actualmente.</p>
+            <article>
+              <a href="./pags/ligues.html" class="link-cards-hero">
+                <img src="./assets/icons/ligue-png-card.png" alt="ligue-png-card" id="ligue-png-card" />
+                <h2 class="h2-cards">Ligas</h2>
+                <p class="text-cards">Visita las ligas mas competitivas actualmente.</p></a
+              >
             </article>
-            <article class="cards">
-              <img src="./assets/icons/stadium-png-card.png" alt="stadium-png-card" id="stadium-png-card" />
-              <h2 class="h2-cards">Estadios</h2>
-              <p class="text-cards">Revisa los estadios mas icónicos del deporte mas famoso del mundo.</p>
+            <article>
+              <a href="./pags/stadiums.html" class="link-cards-hero">
+                <img src="./assets/icons/stadium-png-card.png" alt="stadium-png-card" id="stadium-png-card" />
+                <h2 class="h2-cards">Estadios</h2>
+                <p class="text-cards">Revisa los estadios mas icónicos del deporte mas famoso del mundo.</p></a
+              >
             </article>
           </div>
         </div>
