--- a/proyect 3/index.html
+++ b/proyect 3/index.html
@@ -16,8 +16,8 @@
         <input type="checkbox" id="input-checkbox-hamburguer" />
         <ul class="list-nav">
           <li><a href="./index.html" id="active" class="link-menu">Inicio </a></li>
-          <li><a href="#jugadores" class="link-menu">Jugadores</a></li>
-          <li><a href="#ligas" class="link-menu">Ligas</a></li>
+          <li><a href="./pags/players.html" class="link-menu">Jugadores</a></li>
+          <li><a href="./pags/ligues.html" class="link-menu">Ligas</a></li>
           <li><a href="#" class="link-menu">Contacto</a></li>
           <li><a href="#" class="link-menu">Sobre nosotros</a></li>
         </ul>
