--- a/proyect4/index.html
+++ b/proyect4/index.html
@@ -24,14 +24,14 @@
         <img src="./assets/Zanella.png" alt="zanella-png" id="zanella-png" />
       </div>
       <nav>
-        <ul>
-          <li><a href="#">Inicio </a></li>
-          <li><a href="#">Modelos </a></li>
-          <li><a href="#">Contacto </a></li>
-          <li><a href="#">Concesionarios</a></li>
-        </ul>
         <input type="checkbox" id="btn-input" />
         <label for="btn-input" class="bars-button"><i class="fa-solid fa-bars"></i></label>
+        <ul class="list__nav-links">
+          <li><a href="#" target="_blank">Inicio </a></li>
+          <li><a href="#" target="_parent">Modelos </a></li>
+          <li><a href="#" target="_self">Contacto </a></li>
+          <li><a href="#" target="_top">Concesionarios</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -84,5 +84,6 @@
         </article>
       </section>
     </main>
+    <footer></footer>
   </body>
 </html>
